--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="js/menu.js"></script>
-    <script src="js/carousel.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
